# Generated by Django 5.2.1 on 2025-05-30 14:07

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='EventoSistema',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('descripcion', models.TextField()),
                ('origen', models.CharField(choices=[('USUARIO', 'Usuario'), ('SISTEMA', 'Sistema'), ('EXTERNO', 'Externo')], max_length=20)),
                ('fecha_hora', models.DateTimeField(auto_now_add=True)),
                ('tipo', models.CharField(choices=[('INFO', 'Información'), ('ALERTA', 'Alerta'), ('ERROR', 'Error')], max_length=20)),
                ('usuario', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
        ),
    ]
