# Generated by Django 5.2.1 on 2025-05-30 14:07

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('centro_monitoreo', '0001_initial'),
        ('geolocalizacion', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='DispositivoIoT',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('tipo', models.CharField(choices=[('SIRENA', 'Sirena'), ('SENSOR', 'Sensor'), ('CAMARA', 'Cámara')], max_length=20)),
                ('estado', models.CharField(choices=[('ACTIVO', 'Activo'), ('INACTIVO', 'Inactivo'), ('MANTENIMIENTO', 'Mantenimiento')], max_length=20)),
                ('codigo_serie', models.CharField(max_length=100)),
                ('fecha_instalacion', models.DateTimeField()),
                ('estado_conexion', models.CharField(choices=[('online', 'Online'), ('offline', 'Offline')], default='online', max_length=10)),
                ('ultimo_ping', models.DateTimeField(blank=True, null=True)),
                ('centro_monitoreo', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='centro_monitoreo.centromonitoreo')),
                ('ubicacion', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='geolocalizacion.ubicacion')),
                ('usuario', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='LogDispositivo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('evento', models.CharField(max_length=100)),
                ('descripcion', models.TextField(blank=True)),
                ('fecha_hora', models.DateTimeField(auto_now_add=True)),
                ('dispositivo', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='dispositivos.dispositivoiot')),
            ],
        ),
    ]
