# Generated by Django 5.2.1 on 2025-05-30 14:07

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Pais',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100, verbose_name='País')),
            ],
        ),
        migrations.CreateModel(
            name='Provincia',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100, verbose_name='Provincia')),
                ('pais', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='provincias', to='geolocalizacion.pais')),
            ],
        ),
        migrations.CreateModel(
            name='Ciudad',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100, verbose_name='Ciudad')),
                ('provincia', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='ciudades', to='geolocalizacion.provincia')),
            ],
        ),
        migrations.CreateModel(
            name='Zona',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100, verbose_name='Zona')),
                ('descripcion', models.TextField(blank=True, null=True)),
                ('nivel_riesgo', models.IntegerField(default=0, verbose_name='Nivel de Riesgo')),
                ('geom', models.TextField(blank=True, null=True, verbose_name='Geometría')),
                ('ciudad', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='zonas', to='geolocalizacion.ciudad')),
            ],
        ),
        migrations.CreateModel(
            name='Ubicacion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('latitud', models.DecimalField(decimal_places=6, max_digits=9)),
                ('longitud', models.DecimalField(decimal_places=6, max_digits=9)),
                ('direccion', models.CharField(max_length=255)),
                ('zona_riesgo', models.BooleanField(default=False)),
                ('timestamp', models.DateTimeField(auto_now_add=True)),
                ('zona', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='geolocalizacion.zona')),
            ],
        ),
    ]
