# Generated by Django 5.2.1 on 2025-05-30 14:07

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('reportes', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Patrullero',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('placa', models.CharField(max_length=20)),
                ('unidad', models.CharField(max_length=50)),
                ('activo', models.BooleanField(default=True)),
                ('conductor', models.CharField(max_length=100)),
                ('latitud_actual', models.DecimalField(decimal_places=6, max_digits=9)),
                ('longitud_actual', models.DecimalField(decimal_places=6, max_digits=9)),
                ('ultimo_reporte', models.DateTimeField(blank=True, null=True)),
                ('telefono_contacto', models.CharField(blank=True, max_length=20)),
                ('estado_actual', models.CharField(choices=[('disponible', 'Disponible'), ('en_mision', 'En misión'), ('fuera_servicio', 'Fuera de servicio')], default='disponible', max_length=20)),
            ],
        ),
        migrations.CreateModel(
            name='AsignacionRespuesta',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_asignacion', models.DateTimeField(auto_now_add=True)),
                ('estado', models.CharField(choices=[('NUEVO', 'Nuevo'), ('EN_CURSO', 'En Curso'), ('FINALIZADO', 'Finalizado'), ('CANCELADO', 'Cancelado')], max_length=20)),
                ('reporte', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='reportes.reporte')),
                ('patrullero', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='patrulleros.patrullero')),
            ],
        ),
    ]
