# Generated by Django 5.2.1 on 2025-05-30 14:07

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('alertas', '0001_initial'),
        ('geolocalizacion', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Evidencia',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('tipo', models.CharField(choices=[('IMAGEN', 'Imagen'), ('VIDEO', 'Video'), ('DOCUMENTO', 'Documento'), ('OTRO', 'Otro')], max_length=20)),
                ('url', models.URLField()),
                ('descripcion', models.CharField(blank=True, max_length=255)),
                ('fecha_subida', models.DateTimeField(auto_now_add=True)),
                ('tipo_archivo', models.CharField(max_length=20)),
                ('hash', models.CharField(max_length=128)),
            ],
        ),
        migrations.CreateModel(
            name='Reporte',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('tipo', models.CharField(choices=[('INCENDIO', 'Incendio'), ('INUNDACION', 'Inundación'), ('SISMO', 'Sismo'), ('OTRO', 'Otro')], max_length=20)),
                ('descripcion', models.TextField()),
                ('fecha_hora', models.DateTimeField(auto_now_add=True)),
                ('anonimo', models.BooleanField(default=False)),
                ('estado', models.CharField(choices=[('NUEVO', 'Nuevo'), ('EN_PROCESO', 'En Proceso'), ('CERRADO', 'Cerrado')], max_length=20)),
                ('prioridad', models.PositiveSmallIntegerField(default=3)),
                ('alerta', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='alertas.alerta')),
                ('ubicacion', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='geolocalizacion.ubicacion')),
                ('usuario', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='IARegistro',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('modelo', models.CharField(max_length=100)),
                ('evento_detectado', models.CharField(max_length=100)),
                ('confianza', models.FloatField()),
                ('fecha_hora', models.DateTimeField(auto_now_add=True)),
                ('evidencia', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='reportes.evidencia')),
                ('reporte', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='reportes.reporte')),
            ],
        ),
        migrations.AddField(
            model_name='evidencia',
            name='reporte',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='reportes.reporte'),
        ),
    ]
